--- a/app/src/main/res/layout/fragment_caculator.xml
+++ b/app/src/main/res/layout/fragment_caculator.xml
@@ -1,48 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".MainActivity"
+    android:layout_height="match_parent"
+    android:background="@color/editinput_color"
     android:orientation="vertical"
-    android:background="@color/editinput_color">
+    tools:context=".MainActivity">
+
     <TextView
-        android:id="@+id/tv_result"
+        android:id="@+id/text_result"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="100dp"
-        android:textAlignment="viewEnd"
+        android:layout_height="140dp"
         android:layout_marginEnd="8dp"
         android:background="@color/editinput_color"
+        android:text="0"
+        android:textAlignment="viewEnd"
         android:textColor="#FFFFFF"
+        android:textSize="100dp"></TextView>
 
-        >
-    </TextView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="4"
-        >
+        android:weightSum="4">
+
         <Button
-            android:id="@+id/btn_ac"
+            android:id="@+id/button_ac"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="AC"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
             android:layout_margin="1dp"
-            >
-        </Button>
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="AC"
+            android:textSize="30sp"></Button>
 
         <Button
-
-            android:id="@+id/btn_c"
+            android:id="@+id/button_c"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -53,8 +48,7 @@
             android:textSize="30sp"></Button>
 
         <Button
-
-            android:id="@+id/btn_per"
+            android:id="@+id/button_per"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -65,7 +59,7 @@
             android:textSize="30sp"></Button>
 
         <Button
-            android:id="@+id/btn_div"
+            android:id="@+id/button_div"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -73,57 +67,51 @@
             android:layout_weight="1"
             android:background="#F5923E"
             android:text="/"
-            android:textSize="30sp">
-
-        </Button>
+            android:textSize="30sp"></Button>
     </LinearLayout>
-    <LinearLayout
 
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="4"
-        >
-        <Button
-            android:id="@+id/btn_n7"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="7"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_n8"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="8"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_n9"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="9"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
+        android:weightSum="4">
 
         <Button
-            android:id="@+id/btn_mul"
+            android:id="@+id/button_7"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="7"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_8"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="8"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_9"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="9"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_mul"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -131,57 +119,51 @@
             android:layout_weight="1"
             android:background="#F5923E"
             android:text="X"
-            android:textSize="30sp">
-
-        </Button>
+            android:textSize="30sp"></Button>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="4"
-        >
+        android:weightSum="4">
+
         <Button
-            android:id="@+id/btn_n4"
+            android:id="@+id/button_4"
             style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
             android:text="4"
-            android:layout_weight="1"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_5"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
             android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_n5"
-            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
             android:text="5"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
+            android:textSize="30sp"></Button>
+
         <Button
-            android:id="@+id/btn_n6"
+            android:id="@+id/button_6"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="6"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
             android:layout_margin="1dp"
-            >
-        </Button>
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="6"
+            android:textSize="30sp"></Button>
 
         <Button
-
-            android:id="@+id/btn_sub"
+            android:id="@+id/button_sub"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -189,56 +171,51 @@
             android:layout_weight="1"
             android:background="#F5923E"
             android:text="-"
-            android:textSize="30sp">
-
-        </Button>
+            android:textSize="30sp"></Button>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="4"
-        >
-        <Button
-            android:id="@+id/btn_n1"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="1"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_n2"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_n3"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="3"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
+        android:weightSum="4">
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/button_1"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="1"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_2"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="2"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_3"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="3"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_add"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -248,40 +225,38 @@
             android:text="+"
             android:textSize="30sp"></Button>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal"
-        android:weightSum="4"
-        >
-        <Button
-            android:id="@+id/btn_n0"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="0"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
-        <Button
-            android:id="@+id/btn_dot"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:text="."
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:textSize="30sp"
-            android:background="#E0E0E0"
-            android:layout_margin="1dp"
-            >
-        </Button>
+        android:weightSum="4">
 
         <Button
-            android:id="@+id/btn_result"
+            android:id="@+id/button_0"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="2"
+            android:background="#E0E0E0"
+            android:text="0"
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button.dot"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:layout_weight="1"
+            android:background="#E0E0E0"
+            android:text="."
+            android:textSize="30sp"></Button>
+
+        <Button
+            android:id="@+id/button_result"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="match_parent"
